# strawberry-benchmark

./: .env.example  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  settings.py
alembic/: env.py
alembic/versions/: 27e9c85fbfef_.py  fdad5a654193_.py
database/: base.py  models.py
schema/: __init__.py  loaders.py  queries.py  types.py  types_inline.py
seeding/: main.py
